# testProject

testing/: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  COMPLETION_REPORT.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt
testing/.github/workflows/: ci-cd-pipeline.yml  deploy-s3.yml  infrastructure.yml  main.yml  manual-deployment.yml  scheduled-tests.yml
testing/app/src/: config.py  database.py  main.py  s3_client.py
testing/docker/: Dockerfile  Dockerfile.multistage  docker-compose.yml
testing/k8s/: database.yaml  deployment.yaml  ingress.yaml
testing/scripts/: build-docker.sh  deploy.sh  health-check.sh  init-terraform.sh  run-tests.sh
testing/terraform/: ecs.tf  main.tf  outputs.tf  rds.tf  variables.tf  vpc.tf
testing/tests/: conftest.py
testing/tests/integration/: test_integration.py
testing/tests/smoke/: test_smoke.py
testing/tests/unit/: test_main.py
